[fix] fixed some css element alignment issues with browse and search page, made animations more consistent

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -284,7 +284,7 @@ input[type=text].shortenURLField {
     animation: moveFromRight .6s ease both;
 }
 
-/* USER PAGE */
+/* BROWSE PAGE */
 
 .userBentos {
     text-align: center;
@@ -301,8 +301,6 @@ input[type=text].shortenURLField {
     color: #BADA55;
 }
 
-/* SEARCH PAGE */
-
 .browse-title {
     text-align: center;
     white-space: nowrap;
@@ -310,8 +308,8 @@ input[type=text].shortenURLField {
     text-overflow: ellipsis;
 }
 
-.searchSection {
-    margin-bottom: 10px;   
+.browseSection {
+    margin: auto;
 }
 
 .bento-metadata {
@@ -507,6 +505,15 @@ input[type=text].shortenURLField {
 
 /* SEARCH PAGE */
 
+.searchSection {
+    margin-bottom: 10px;   
+}
+
+.searchGrid {
+    margin: auto;
+    text-align: center;
+}
+
 .scrollSection {
     height: 100vh;
 }
@@ -579,6 +586,7 @@ div.thumbnailSpace.wow.bounceInDown {
     box-shadow: 0 4px 8px 0 rgba(142, 198, 78, 0.5);
     width: 300px;
     height: 600px;
+    margin: auto;
 }
 .thumbnail:hover {
     border-color: #BADA55;
